* Fixed wrapping of TileInfoItem components at Transaction view

--- a/src/view/Views/AccountList/style.scss
+++ b/src/view/Views/AccountList/style.scss
@@ -1,7 +1,7 @@
 .heading,
 .content-header,
 .content-container {
-  max-width: calc(var(--tile-size) * 4 + var(--tile-gap) * 3);
+  max-width: var(--section-width);
 }
 
 .content-container {
